[package]
name = "asdf-pixel-sort"
version = "0.0.1"
authors = ["Yuki Kodama<endflow.net@gmail.com>"]
repository = "https://github.com/kuy/asdf-pixel-sort"
homepage = "https://github.com/kuy/asdf-pixel-sort"
license = "MIT"
edition = "2018"

[dependencies]
image = { version = "0.23", default-features = false }
