[package]
name = "asdf-pixel-sort"
version = "0.0.4"
description = "ASDF pixel sorting"
authors = ["Yuki Kodama<endflow.net@gmail.com>"]
repository = "https://github.com/kuy/asdf-pixel-sort"
homepage = "https://github.com/kuy/asdf-pixel-sort"
license = "MIT"
edition = "2018"
exclude = [
    ".github/*",
    "assets/*",
]

[dependencies]
image = { version = "0.23", default-features = false }
once_cell = "1.8.0"
